objects/nFORCE__Rule_Engine_Context_Rule__c.object
<CustomObject>
    <description>The rules/decisions that are available for the specific context.</description>
    <fields>
        <fullName>nFORCE__Description__c</fullName>
        <description>This field is preset as part of the nCino system. It specifies the description of the context rule. If creating new contexts to link logic to, this field is manually entered and optional. It is a free form text area to set the description of the rule/decision. Although optional, it is recommended to include a description of the context as a best practice.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Rule_Engine_Context__c</fullName>
        <description>This field is preset as part of the nCino system and is required. This field specifies the context associated with the rule, including where the rule will be initiated or used. For example, loan auto decision is used for auto decisioning purposes, policy exceptions is used for automating policy exceptions. If creating new contexts to link logic to, this field is manually entered and required.</description>
        <label>Rule Engine Context</label>
        <referenceTo>nFORCE__Rule_Engine_Context__c</referenceTo>
        <relationshipLabel>Rule Engine Context Rules</relationshipLabel>
        <relationshipName>Rule_Engine_Context_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Rule Engine Context Rule</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Context Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rule Engine Context Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>